Lynsalg - Annuller,ændre

--- a/Bejerholm Stenhuggeri/src/view/Gui.form
+++ b/Bejerholm Stenhuggeri/src/view/Gui.form
@@ -1100,10 +1100,10 @@
                           <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="jButton22" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jButton23" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jButtonLynsalg_ændre" alignment="0" max="32767" attributes="0"/>
                               <Component id="jButton26" alignment="0" max="32767" attributes="0"/>
                               <Component id="jButton25" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jButton24" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jButtonLynsalgAnnuller" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
                       </Group>
@@ -1119,9 +1119,9 @@
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="jButton22" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                                          <Component id="jButton23" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jButtonLynsalg_ændre" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                                          <Component id="jButton24" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jButtonLynsalgAnnuller" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
                                           <Component id="jButton25" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
@@ -1151,15 +1151,21 @@
                     <Property name="text" type="java.lang.String" value="Godkend"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JButton" name="jButton23">
+                <Component class="javax.swing.JButton" name="jButtonLynsalg_&#xe6;ndre">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="&#xc6;ndre"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonLynsalg_&#xe6;ndreActionPerformed"/>
+                  </Events>
                 </Component>
-                <Component class="javax.swing.JButton" name="jButton24">
+                <Component class="javax.swing.JButton" name="jButtonLynsalgAnnuller">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Annuller"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonLynsalgAnnullerActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="jButton25">
                   <Properties>
